--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
             "App\\": "app/"
         },
         "files":[
-            "app/helpers/basic.php"
+            "app/helpers/basic.php",
+            "public/plugins/ckfinder_2.6.2.1/ckfinder.php"
         ]
     },
     "autoload-dev": {
